fix(FF-00): fix function badge z-index issue

--- a/packages/card/src/components/Card/styles.module.scss
+++ b/packages/card/src/components/Card/styles.module.scss
@@ -32,6 +32,7 @@ $sizes: 's', 'm', 'l';
   @include composite-var($card-container);
 
   position: relative;
+  z-index: 0;
 
   overflow: hidden;
 
@@ -156,7 +157,7 @@ $sizes: 's', 'm', 'l';
     outline-color: $sys-neutral-decor-default;
     outline-width: $border-width-card-container;
 
-    .check {
+    .check { /* stylelint-disable-line no-descending-specificity */
       color: $sys-neutral-on-accent;
       background-color: $sys-neutral-text-disabled;
     }
